--- a/src/style.css
+++ b/src/style.css
@@ -5,11 +5,11 @@ list-style: none;
 }
 
 :root {
-    --color-back: rgb(0, 0, 0);
+    --color-back: black;
     --color-font: white;
 }
 
-#table-container {
+.table-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -17,8 +17,17 @@ list-style: none;
     height: 100vh;
 }
 
+.black-field{
+    background-color: var(--color-back);
+    color: var(--color-font);
+    padding: 2%;
+    border-radius: 5px;
+    height: 60vh;
+    width: 30vw;
+ }
+
 table {
-    width: 30%;
+    width: 100%;
     border-radius: 5px;
     padding: 3%;
 }
@@ -27,27 +36,30 @@ td{
     vertical-align: top;
 }
 
- table .toDo{
-    border-bottom: 1px solid var(--color-font);
-}
-
-#black-field{
-   background-color: var(--color-back);
-   color: var(--color-font);
-   padding: 2%;
-   border-radius: 5px;
-   height: 60vh;
-};
-
 input[type="text"]{
     background: var(--color-back);
-};
+    color: var(--color-font);
+    padding: 2%;
+}
 
+/*  %%%%%%%%%%%%%%%%%%OK, the layout of the table is a pain in the ass, I try a div-container%%%%%%%%%%%%%% */
 
+.exampleTask{
+  display: grid;
+  grid-template-columns: 5fr 1fr 1fr 1fr;
+  padding: 5% 0% 5% 0%;
+  font-size: 0.9em;
+  opacity: 0.5;
+}
 
+.example {
+    color: var(--color-font);
+    font-size: 1em;
+    opacity: 0.5;
+}
 
-
-/* .toDo2 {
-    display: grid;
-    grid-template-columns: 4fr 1fr 1fr 1fr;
-} */
+.task{
+    padding: 2% 0% 2% 0%;
+    color: var(--color-font);
+    border-bottom: var(--color-font);
+}
