quick fix of the black-field-width

--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,7 @@ list-style: none;
     padding: 2%;
     border-radius: 5px;
     height: 60vh;
-    width: 30vw;
+    width: 250px;
  }
 
 table {
