--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,7 @@ list-style: none;
  }
 
 table {
+    display: table;
     width: 100%;
     border-radius: 5px;
     padding: 3%;
@@ -34,6 +35,8 @@ table {
 
 td{
     vertical-align: top;
+    border-bottom: 1px solid var(--color-font);
+    padding: padding: 5% 0% 5% 0%;
 }
 
 input[type="text"]{
@@ -41,8 +44,6 @@ input[type="text"]{
     color: var(--color-font);
     padding: 2%;
 }
-
-/*  %%%%%%%%%%%%%%%%%%OK, the layout of the table is a pain in the ass, I try a div-container%%%%%%%%%%%%%% */
 
 .exampleTask{
   display: grid;
@@ -54,12 +55,13 @@ input[type="text"]{
 
 .example {
     color: var(--color-font);
-    font-size: 1em;
+    font-size: 0.8em;
     opacity: 0.5;
 }
 
 .task{
-    padding: 2% 0% 2% 0%;
+    padding: 4% 0% 4% 0%;
     color: var(--color-font);
-    border-bottom: var(--color-font);
+    border-bottom: 1px solid var(--color-font);
+    font-size: 0.8em;
 }
