--- a/src/style.css
+++ b/src/style.css
@@ -65,3 +65,8 @@ input[type="text"]{
     border-bottom: 1px solid var(--color-font);
     font-size: 0.8em;
 }
+
+h2{
+    text-align: center;
+    margin-bottom: 0;
+}
