--- a/src/style.css
+++ b/src/style.css
@@ -10,41 +10,103 @@ list-style: none;
 }
 
 body {
-    background-image: url(https://source.unsplash.com/random/?minimalism);
+    background:linear-gradient(0deg, rgba(255, 255, 255, 0.324), rgba(18, 18, 18, 0.8)), url(https://source.unsplash.com/random/?minimalism);
+    background-blend-mode: multiply;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 #logo {
     padding: 8px 16px 8px 16px;
-    position: fixed;
+    position: absolute;
     top:0;
     left:0;
-    background-color: var(--color-back);
-    border-radius: 5px;
-    margin:16px
+    margin:1rem
 }
 
 .table-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 90vh;
+    height: 100dvh;
 }
 
 .black-field {
     background-color: var(--color-back);
     color: var(--color-font);
-    padding: 2%;
-    border-radius: 5px;
-    width: 300px;
+    padding: 1rem;
+    border-radius: .1rem;
+    width: 280px;
     min-height: 250px;
- }
+    outline: .1rem solid #181818;
+    outline-offset: .2rem;
+}
+
+#form2 {
+    display: flex;
+    justify-content: space-between;
+}
+
+input {
+    background-color: var(--color-back);
+    border-radius: .1rem;
+    border: .1rem solid var(--color-font);
+}
+
+button{
+    position: relative;
+    background-color: var(--color-back);
+    border-radius: .1rem;
+    border: .1rem solid var(--color-font);
+    color: white;
+    padding: 0.8em 1.8em;
+    cursor:pointer;
+    user-select:none;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    transition-duration: 0.4s;
+    -webkit-transition-duration: 0.4s; /* Safari */
+}
+
+button:hover {
+    transition-duration: 0.1s;
+    background-color: #3A3A3A;
+}
+
+button:after {
+    content: "";
+    display: block;
+    position: absolute;
+    border-radius: .1rem;
+    left: 0;
+    top:0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: all 0.5s;
+    box-shadow: 0 0 10px 40px white;
+}
+
+button:active:after {
+    box-shadow: 0 0 0 0 white;
+    position: absolute;
+    border-radius: .1rem;
+    left: 0;
+    top:0;
+    opacity: 1;
+    transition: 0s;
+}
+
+button:active {
+    top: 1px;
+}
+
 
 table {
     display: table;
     width: 100%;
-    border-radius: 5px;
+    border-radius: .1rem;
     padding: 3%;
 }
 
@@ -102,47 +164,4 @@ input[type="text"]{
  background-color: var(--color-back);
  color: var(--color-font);
  border: none;
-}
-
-/* Layout, wenn das inut-feld nicht bearbeitet werden soll */
-.description :focus, .description :active {
-    border: none;
-}
-
-/* Layout, wenn das inut-feld bearbeitet wird und aktiviert wird */
-.description :focus, .description :active {
-    border: 1px solid darkgrey;
-}
-
-.fake {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    width: 150px;
-    min-height: 125px;
-    padding: 3%;
-    background-color: rgba(255,255,255, 0.2);
-    margin: 3%;
-    color: var(--color-back);
-    border: 1px dashed black;
-    border-radius: 5px;
-}
-
-@media only screen and (max-width: 567px) {
-    
-    .table-container {
-            flex-direction: column;
-            height: 100vh;
-    }
-
-    .black-field {
-        padding: 24px;
-        width: 300px;
-    }
-
-    .fake {
-        display: none;
-    }
-
 }
