--- a/src/style.css
+++ b/src/style.css
@@ -128,6 +128,7 @@ input[type="text"]{
     grid-template-columns: 5fr 1fr 1fr 1fr;
     padding: 5% 0% 5% 0%;
     font-size: 0.9em;
+    border-bottom: 1px solid var(--color-font);
 }
 
 .example {
@@ -139,17 +140,18 @@ input[type="text"]{
 .example i {
     font-size: 1.6em;
     padding-left: 1%;
+    
 }
 
 .task{
     padding: 4% 0% 4% 0%;
     color: var(--color-font);
-    border-bottom: 1px solid var(--color-font);
     font-size: 0.9em;
 }
 
 .task i{
     cursor: pointer;
+    font-size: 1.5em;
 }
 
 .taskchecked{
