the example tasks now disappears when a new task is added. it comes back when no own tasks are in the list.

--- a/src/style.css
+++ b/src/style.css
@@ -123,7 +123,7 @@ input[type="text"]{
     padding: 2%;
 }
 
-.exampleTask, .newTask{
+#exampleTask, .newTask{
     display: grid;
     grid-template-columns: 5fr 1fr 1fr 1fr;
     padding: 5% 0% 5% 0%;
