--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,11 @@
 
-*{font-family:Arial, Helvetica, sans-serif;
+*{
+font-family:Arial, Helvetica, sans-serif;
 text-decoration: none;
-list-style: none; 
+list-style: none;
+margin: 0;
+padding: 0;
+box-sizing: border-box; 
 }
 
 :root {
@@ -17,8 +21,7 @@ body {
 }
 
 #logo {
-    padding: 8px 16px 8px 16px;
-    position: absolute;
+    position: fixed;
     top:0;
     left:0;
     margin:1rem
@@ -33,10 +36,10 @@ body {
 
 .black-field {
     background-color: var(--color-back);
+    opacity: 0.9;
     color: var(--color-font);
-    padding: 1rem;
+    padding: 4rem 2rem 4rem 2rem;
     border-radius: .1rem;
-    width: 280px;
     min-height: 250px;
     outline: .1rem solid #181818;
     outline-offset: .2rem;
@@ -60,6 +63,7 @@ button{
     border: .1rem solid var(--color-font);
     color: white;
     padding: 0.8em 1.8em;
+    margin-left: 8px;
     cursor:pointer;
     user-select:none;
     text-align: center;
@@ -128,7 +132,7 @@ input[type="text"]{
     grid-template-columns: 5fr 1fr 1fr 1fr;
     padding: 5% 0% 5% 0%;
     font-size: 0.9em;
-    border-bottom: 1px solid var(--color-font);
+    border-bottom: .1rem solid var(--color-font);
 }
 
 .example {
@@ -139,19 +143,51 @@ input[type="text"]{
 
 .example i {
     font-size: 1.6em;
-    padding-left: 1%;
+    padding-left: .2rem;
     
 }
 
 .task{
     padding: 4% 0% 4% 0%;
     color: var(--color-font);
-    font-size: 0.9em;
+    font-size: 1em;
+    display: flex;
+    align-items: center;
 }
 
 .task i{
     cursor: pointer;
     font-size: 1.5em;
+    transition-duration: 0.4s;
+    -webkit-transition-duration: 0.4s; /* Safari */
+}
+
+.task i:hover{
+    color: #7F7F7F;
+    transition-duration: 0.1s;
+}
+
+.task i:after{
+    transition: all 0.5s;
+}
+
+.task i:active::after{
+    transition: 0s;
+}
+
+#newTask2:focus {
+    transition: all 0.3s;
+    outline: .1rem solid #F2CF1D;
+}
+
+.description {
+    margin-right:1rem;
+    padding: .5rem;
+}
+
+.description:focus-visible {
+    outline: .1rem solid var(--color-font);
+    border-radius: .1rem;
 }
 
 .taskchecked{
